# Project-with-pipeline-version1

Final-Origin-Product-Exam-convert-main/Final-Origin-Product-Exam-convert-main/project/: .env.example  COMPLETE-DOCUMENTATION.md  Dockerfile  Jenkinsfile  LOCAL_DEPLOYMENT_GUIDE.md  README-AWS-EKS.md  README-Jenkins-Pipeline.md  README-PDF-Generation.md  README-k8s.md  README.md  deploy.sh  nginx.conf  package-lock.json  package.json  setup.sh  vite.config.ts
Final-Origin-Product-Exam-convert-main/Final-Origin-Product-Exam-convert-main/project/Get-Converted-Exams/: package-lock.json  package.json
Final-Origin-Product-Exam-convert-main/Final-Origin-Product-Exam-convert-main/project/aws-eks/: aws-load-balancer-controller.yaml  cluster-autoscaler.yaml  cluster-config.yaml  deploy-eks.sh  deployment.yaml  ecr-setup.sh  hpa.yaml  ingress-alb.yaml  monitoring.yaml
Final-Origin-Product-Exam-convert-main/Final-Origin-Product-Exam-convert-main/project/jenkins/: Dockerfile.jenkins-agent  configure-credentials.sh  github-webhook-setup.md  pipeline-library.groovy  setup-jenkins.sh
Final-Origin-Product-Exam-convert-main/Final-Origin-Product-Exam-convert-main/project/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secrets.yaml  service.yaml
Final-Origin-Product-Exam-convert-main/Final-Origin-Product-Exam-convert-main/project/rust-formatter/: Cargo.toml
Final-Origin-Product-Exam-convert-main/Final-Origin-Product-Exam-convert-main/project/rust-formatter/src/: lib.rs
(+18 files in other folders)
