[package]
name = "document-formatter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "File",
  "Blob",
  "BlobPropertyBag",
  "Uint8Array",
]